# agreed-time

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  TRADEMARKS.md  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-039c11a2d8a17d02b2f7bd00cffcc4bd88c5327eb50dd3572d3ec7534af90e1e.json  query-2174ac9869cad0f6201f9bb542c62b0de70feb035e24e90c568bac756095ff2a.json  query-28caed0275e670eb1d33f800ba682ffd7a7170b85383d3586a5e37e27d8ab00b.json  query-3baabf69959d6333ebaeca587fde16a1bb0005a653f6b3a4c60ca824d9db643a.json  query-3cc88ec2abe7fae364d0b778078486693cdbef6cf46047285bf51b4d41a4f8cf.json  query-47522d3e1b979563498df7e4f0e8151e1da4e8490a9d1907203acdae77200f02.json  query-6e3c3e82717b0ab087e1b32d5e05c121a55fc4b833b79362ea8b227b9bdf6f4d.json  query-8306bda1341fb630cfcc339f02d994e99cee51cf27c89ee56263fbdd9ad3f6aa.json  query-8453a1bdad86dd19aba4c72b3bc8be6dd990265ccc719c7c343aacb7176a8199.json  query-ab4eb49cd5edc82f9605fc6ac350e1f1cb64a541fd853f0313b06e7d27e4d97e.json  query-b1bc456254e383b72757dab7292778e7c27da6c97bdc8cdd7c5c45ea654fff84.json  query-b7a88c9e511a0112f65bdce3b09daeca65148f4ad5f53a6fd22b2460532a3b4f.json  query-bf02641ad955b2b1a8db05ddccc95b6fdd8d528fe833c1edf300bc993d01d5ee.json  query-bfde28ec3639d86b7b41bdb0f1387bb3096636e3f967d08c40f961fd4cd0bb54.json  query-c5cfc0359271fd5c88eededa1989a431efa613d85a55e78385e396e6a3e9e061.json  query-cff900674756172abb1766bbe4cd23d0ee30c6faacded79b9480ed4ae411e033.json  (+9 more)
backend/migrations/: 20251208131305_create_availability_table.up.sql  (+15 more)
(+92 files in other folders)
